Add license + cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,23 @@ nb-configuration.xml
 # vim
 .*.sw[a-p]
 
+# Java
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
 # various other potential build files
 /build
 /bin
 /dist
 /manifest.mf
+*.log
 
 # Mac filesystem dust
 .DS_Store
@@ -27,3 +39,13 @@ nb-configuration.xml
 *.ipr
 *.iws
 .idea/
+
+# Gradle
+.gradle
+build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
