Various optimizations + Add the possibility to use disabled-worlds as a whitelist. (Fixes #22)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,6 +3,9 @@
 # Compatible mode with other plugins like HealthBar, ColoredTags, GhostPlayer or McCombatLevel
 compatibilityMode: false
 
+# Should be the node disabled-worlds handled as whitelist or blacklist
+disabled-worlds-whitelist: false
+
 disabled-worlds:
   - city
 
