--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <name>ScoreboardStats</name>
     <inceptionYear>2013</inceptionYear>
     <description>Show the Scoreboard with many custom variables</description>
-    <version>0.9</version>
+    <version>0.9.2</version>
     <url>http://dev.bukkit.org/bukkit-plugins/scoreboardstats</url>
 
     <properties>
@@ -29,12 +29,27 @@
         <developerConnection>scm:git:ssh://git@github.com:games647/ScoreboardStats.git</developerConnection>
     </scm>
 
+    <licenses>
+        <license>
+            <name>The MIT License</name>
+            <url>http://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <ciManagement>
-
+        <system>Jenkins</system>
+        <!--Not my server; not final-->
+        <url>http://ci.nixium.com/job/ScoreboardStats/</url>
     </ciManagement>
-    
-    <distributionManagement>
 
+    <distributionManagement>
+        <repository>
+            <id>nixium-repo</id>
+            <name>nixium maven repo</name>
+            <url>http://ci.nixium.com/plugin/repository/everything/</url>
+            <uniqueVersion>false</uniqueVersion>
+        </repository>
     </distributionManagement>
 
     <build>
@@ -62,7 +77,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.5</version>
+                <version>2.6</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -267,7 +282,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>animal-sniffer-maven-plugin</artifactId>
-                        <version>1.13</version>
+                        <version>1.14</version>
                         <configuration>
                             <signature>
                                 <groupId>org.codehaus.mojo.signature</groupId>
@@ -289,11 +304,4 @@
             </build>
         </profile>
     </profiles>
-
-    <licenses>
-        <license>
-            <name>The MIT License</name>
-            <url>http://opensource.org/licenses/MIT</url>
-        </license>
-    </licenses>
 </project>
