--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
             <id>nixium-repo</id>
             <name>nixium maven repo</name>
             <url>http://ci.nixium.com/plugin/repository/everything/</url>
+            <!--Replace every time with the newest version-->
             <uniqueVersion>false</uniqueVersion>
         </repository>
     </distributionManagement>
@@ -210,6 +211,15 @@
             <version>2.0</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/IndividualSigns_v2.0.jar</systemPath>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>me.sirfaizdat.prison</groupId>
+            <artifactId>Prison</artifactId>
+            <version>2.1.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/mcPrison-2.1.1.jar</systemPath>
             <optional>true</optional>
         </dependency>
 
