--- a/pom.xml
+++ b/pom.xml
@@ -235,9 +235,9 @@
         <!--Factions:-->
         <dependency>
             <groupId>com.massivecraft</groupId>
-            <artifactId>Factions</artifactId>
+            <artifactId>FactionsUUID</artifactId>
             <!--Factions-UUID fork of 1.6/1.8-->
-            <version>1.6.9.5-U0.1.15-SNAPSHOT</version>
+            <version>1.6.9.5-U0.1.6</version>
             <!--Make it possible to build automatically like https://github.com/drtshock/ObsidianDestroyer-->
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/Factions-1.6.9.5-U0.1.15.jar</systemPath>
