--- a/pom.xml
+++ b/pom.xml
@@ -101,12 +101,12 @@
         <!--Vault and Heroes-->
         <repository>
             <id>vault-repo</id>
-            <url>http://nexus.theyeticave.net/content/repositories/pub_releases/</url>
+            <url>http://nexus.hc.to/content/repositories/pub_releases/</url>
         </repository>
 
         <repository>
             <id>heroes-repo</id>
-            <url>http://nexus.theyeticave.net/content/repositories/pub_snapshots/</url>
+            <url>http://nexus.hc.to/content/repositories/pub_snapshots/</url>
         </repository>
 
         <repository>
