--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,11 @@
             <id>mypet-repo</id>
             <url>https://nexus.keyle.de/content/groups/public/</url>
         </repository>
+
+        <repository>
+            <id>placeholderapi</id>
+            <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -206,10 +211,16 @@
         </dependency>
 
         <dependency>
+            <groupId>me.clip</groupId>
+            <artifactId>placeholderapi</artifactId>
+            <version>2.0.8</version>
+        </dependency>
+
+<!--        <dependency>
             <groupId>de.keyle</groupId>
             <artifactId>mypet</artifactId>
             <version>2.2.4</version>
-        </dependency>
+        </dependency>-->
 
         <!--API for economy variables-->
         <dependency>
