--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
         <!--MyPet-->
         <repository>
             <id>mypet-repo</id>
-            <url>https://nexus.keyle.de/content/groups/public/</url>
+            <url>http://repo.keyle.de/</url>
         </repository>
 
         <repository>
@@ -216,11 +216,11 @@
             <version>2.0.8</version>
         </dependency>
 
-<!--        <dependency>
+        <dependency>
             <groupId>de.keyle</groupId>
             <artifactId>mypet</artifactId>
-            <version>2.2.4</version>
-        </dependency>-->
+            <version>2.2.5-SNAPSHOT</version>
+        </dependency>
 
         <!--API for economy variables-->
         <dependency>
